Bug 415793 - Creating multiple tags in a row does not correctly adjust the name
Summary: Creating multiple tags in a row does not correctly adjust the name
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-02 11:27 UTC by Thomas Baumgart
Modified: 2020-01-02 11:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-01-02 11:27:40 UTC
SUMMARY
The name of new tags is not adjusted as needed.

STEPS TO REPRODUCE
1. Open the tags view
2. Press 'New tag' two or more times

OBSERVED RESULT
Second and following tags are created with the name "New tag [%2]" and the number of leading blanks increases.

EXPECTED RESULT
Tags are created with name "New tag [1]", "New tag [2]" , etc.
Comment 1 Thomas Baumgart 2020-01-02 11:39:29 UTC
Git commit 7a4c060412fc8b4db8633d50ac3dc054310dbde1 by Thomas Baumgart.
Committed on 02/01/2020 at 11:38.
Pushed by tbaumgart into branch '5.0'.

Correctly increment amended number of new tags
FIXED-IN: 5.0.8

M  +1    -1    kmymoney/kmymoneyutils.cpp

https://commits.kde.org/kmymoney/7a4c060412fc8b4db8633d50ac3dc054310dbde1
Comment 2 Thomas Baumgart 2020-01-02 11:43:57 UTC
Git commit eb1050e05cd4ac74afa7ba402f766412dfb2c36e by Thomas Baumgart.
Committed on 02/01/2020 at 11:40.
Pushed by tbaumgart into branch 'master'.

Correctly increment amended number of new tags
FIXED-IN: 5.0.8
(cherry picked from commit 7a4c060412fc8b4db8633d50ac3dc054310dbde1)

M  +1    -1    kmymoney/kmymoneyutils.cpp

https://commits.kde.org/kmymoney/eb1050e05cd4ac74afa7ba402f766412dfb2c36e