Correctly increment amended number of new tags

BUG: 415793
FIXED-IN: 5.0.8
(cherry picked from commit 7a4c060412fc8b4db8633d50ac3dc054310dbde1)